tools/common/tree-sitter-hyperscript/test/corpus/02_commands.txt
==================
add class (add: add .clicked)
==================

on click add .clicked

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (add_command
                (expression
                  (class_literal))))))))))

==================
add class to target (add: add .clicked to #another-div)
==================

on click add .clicked to #another-div

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (add_command
                (expression
                  (class_literal))
                (expression
                  (id_literal))))))))))

==================
add attribute (add: add @disabled)
==================

on click add @disabled

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (add_command
                (expression
                  (attribute_literal))))))))))

==================
add multiple classes (docs: add .foo to .bar)
==================

add .foo to .bar

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (add_command
          (expression
            (class_literal))
          (expression
            (class_literal)))))))

==================
remove me (rem: remove me)
==================

on click remove me

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (remove_command
                (expression
                  (special_identifier))))))))))

==================
remove class (rem: remove .not-clicked)
==================

on click remove .not-clicked

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (remove_command
                (expression
                  (class_literal))))))))))

==================
remove class from (rem: remove from #another-div)
==================

on click remove .not-clacked from #another-div

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (remove_command
                (expression
                  (class_literal))
                (expression
                  (id_literal))))))))))

==================
remove multiple classes (rem: .foo .bar)
==================

on click remove .foo .bar from #another-div

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (remove_command
                (expression
                  (class_literal))
                (class_literal)
                (expression
                  (id_literal))))))))))

==================
remove attribute (rem: remove @disabled)
==================

on click remove @disabled from the next <button/>

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (remove_command
                (expression
                  (attribute_literal))
                (expression
                  (the_expression
                    (query_literal)))))))))))

==================
toggle class on me (docs intro)
==================

on click toggle .red on me

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (toggle_command
                (expression
                  (class_literal))
                (expression
                  (special_identifier))))))))))

==================
toggle class on target (tog: on #another-div)
==================

on click toggle .toggled on #another-div

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (toggle_command
                (expression
                  (class_literal))
                (expression
                  (id_literal))))))))))

==================
toggle attribute (tog: toggle [@disabled='true'])
==================

on click toggle [@disabled='true']

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (toggle_command
                (expression
                  (attribute_query_literal
                    (attribute_name)
                    (expression
                      (string))))))))))))

==================
toggle for duration (tog: toggle .toggled for 2s)
==================

on click toggle .toggled for 2s

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (toggle_command
                (expression
                  (class_literal))
                (time_literal
                  (duration))))))))))

==================
toggle until event (tog: until mouseleave)
==================

on mouseenter toggle .visible on #help until mouseleave

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (toggle_command
                (expression
                  (class_literal))
                (expression
                  (id_literal))
                (event_name
                  (identifier))))))))))

==================
toggle between classes (tog: between .enabled and .disabled)
==================

on click toggle between .enabled and .disabled

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (toggle_command
                (class_literal)
                (class_literal)))))))))

==================
toggle display (tog: toggle *display)
==================

on click toggle *display on the next <div/>

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (toggle_command
                (expression
                  (style_property))
                (expression
                  (the_expression
                    (query_literal)))))))))))

==================
toggle @disabled until htmx (cook: disable button)
==================

on click toggle @disabled until htmx:afterOnLoad

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (toggle_command
                (expression
                  (attribute_literal))
                (event_name
                  (colon_identifier
                    (identifier)
                    (identifier)))))))))))

==================
set variable (docs: set x to 10)
==================

set x to 10

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (set_command
          (expression
            (identifier))
          (expression
            (number)))))))

==================
set and log (set: set x to 'foo' then log x)
==================

on click set x to 'foo' then log x

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (set_command
                (expression
                  (identifier))
                (expression
                  (string))))
            (command_statement
              (log_command
                (expression
                  (identifier))))))))))

==================
set property (set: set my.style.color)
==================

on click set my.style.color to 'red'

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (set_command
                (expression
                  (pronoun_possessive_primary
                    (identifier)
                    (identifier)))
                (expression
                  (string))))))))))

==================
set global (docs: scoping modifiers)
==================

set global myGlobal to true

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (set_command
          (scope_modifier)
          (expression
            (identifier))
          (expression
            (boolean)))))))

==================
set element (docs: scoping modifiers)
==================

set element myElementVar to true

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (set_command
          (scope_modifier)
          (expression
            (identifier))
          (expression
            (boolean)))))))

==================
set local (docs: scoping modifiers)
==================

set local x to 0

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (set_command
          (scope_modifier)
          (expression
            (identifier))
          (expression
            (number)))))))

==================
set scoped vars (docs: $foo and :bar)
==================

set $foo to 10
set :bar to 20

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (set_command
          (expression
            (identifier))
          (expression
            (number))))
      (command_statement
        (set_command
          (expression
            (identifier))
          (expression
            (number)))))))

==================
set attribute (docs: set @my-attr to 10)
==================

set @my-attr to 10

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (set_command
          (expression
            (attribute_literal))
          (expression
            (number)))))))

==================
set member target (set: me.innerHTML)
==================

set me.innerHTML to "hello"

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (set_command
          (expression
            (special_identifier)
            (member_access
              (identifier)))
          (expression
            (string)))))))

==================
set attribute target (set: me@disabled)
==================

set me@disabled to true

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (set_command
          (expression
            (special_identifier)
            (attr_access
              (attribute_name)))
          (expression
            (boolean)))))))

==================
set possessive target (poss: the window's location)
==================

on click set the window's location to 'https://duck.com'

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (set_command
                (expression
                  (the_expression
                    (identifier))
                  (possessive_access
                    (identifier)))
                (expression
                  (string))))))))))

==================
put into (docs: put 'cool!' into me)
==================

put 'cool!' into me

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (put_command
          (expression
            (string))
          (expression
            (special_identifier)))))))

==================
put before (put: put before me)
==================

put "<hr/>" before me

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (put_command
          (expression
            (string))
          (expression
            (special_identifier)))))))

==================
put after (put: put after me)
==================

put "<hr/>" after me

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (put_command
          (expression
            (string))
          (expression
            (special_identifier)))))))

==================
put at start of (put: at start of me)
==================

put "Hello " at start of me

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (put_command
          (expression
            (string))
          (expression
            (special_identifier)))))))

==================
put at the end of (put: at the end of me)
==================

put "!" at the end of me

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (put_command
          (expression
            (string))
          (expression
            (special_identifier)))))))

==================
put into id.innerHTML (expr: id literals)
==================

on click put 'Clicked!' into #example.innerHTML

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (put_command
                (expression
                  (string))
                (expression
                  (id_literal)
                  (member_access
                    (identifier)))))))))))

==================
call function (call: call myJavascriptFunction())
==================

on click call myJavascriptFunction()

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (call_command
                (expression
                  (identifier)
                  (argument_list))))))))))

==================
call alert (docs: calling functions)
==================

call alert('hello world!')

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (call_command
          (expression
            (identifier)
            (argument_list
              (expression
                (string)))))))))

==================
get command (docs: get)
==================

get the nextInteger() then log it

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (call_command
          (expression
            (the_expression
              (identifier))
            (argument_list))))
      (command_statement
        (log_command
          (expression
            (special_identifier)))))))

==================
send event (send: send doIt to #div1)
==================

on click send doIt(answer:42) to #div1

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (send_command
                (event_name
                  (identifier))
                (named_argument_list
                  (named_argument
                    (identifier)
                    (expression
                      (number))))
                (expression
                  (id_literal))))))))))

==================
trigger event (send: trigger doIt)
==================

on click trigger doIt(answer:42)

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (send_command
                (event_name
                  (identifier))
                (named_argument_list
                  (named_argument
                    (identifier)
                    (expression
                      (number))))))))))))

==================
send with named args (docs: send with arguments)
==================

on click send showMessage(message:'Foo!') to the next <output/>

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (send_command
                (event_name
                  (identifier))
                (named_argument_list
                  (named_argument
                    (identifier)
                    (expression
                      (string))))
                (expression
                  (the_expression
                    (query_literal)))))))))))

==================
fetch basic (fetch: fetch /example)
==================

on click fetch /example
  put it into my innerHTML

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (fetch_command
                (naked_string)))
            (command_statement
              (put_command
                (expression
                  (special_identifier))
                (expression
                  (pronoun_possessive_primary
                    (identifier)))))))))))

==================
fetch as json with POST (fetch: as json)
==================

on click fetch /test as json with method:"POST"
  put `${its result}` into my innerHTML

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (fetch_command
                (naked_string)
                (identifier)
                (fetch_options
                  (named_argument
                    (identifier)
                    (expression
                      (string))))))
            (command_statement
              (put_command
                (expression
                  (backtick_string
                    (template_substitution
                      (interpolation_start)
                      (expression
                        (pronoun_possessive_primary
                          (identifier)))
                      (interpolation_end))))
                (expression
                  (pronoun_possessive_primary
                    (identifier)))))))))))

==================
fetch then put (docs: fetch /demo)
==================

fetch /demo then put it into my.innerHTML

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (fetch_command
          (naked_string)))
      (command_statement
        (put_command
          (expression
            (special_identifier))
          (expression
            (pronoun_possessive_primary
              (identifier))))))))

==================
fetch as json simple (docs: fetch)
==================

fetch /api/data as json

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (fetch_command
          (naked_string)
          (identifier))))))

==================
fetch with timeout (fetch: timeout)
==================

on click fetch /example with timeout:300ms
  put the result into my innerHTML

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (fetch_command
                (naked_string)
                (fetch_options
                  (named_argument
                    (identifier)
                    (expression
                      (duration))))))
            (command_statement
              (put_command
                (expression
                  (the_expression
                    (special_identifier)))
                (expression
                  (pronoun_possessive_primary
                    (identifier)))))))))))

==================
if command (docs: if x > 10)
==================

if x > 10
  log "Greater than 10"
end

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (if_statement
          (expression
            (comparison_expression
              (identifier)
              (comparison_operator)
              (number)))
          (command_sequence
            (command_statement
              (log_command
                (expression
                  (string))))))))))

==================
if-else (docs: if-else)
==================

on click increment :x
  if :x <= 3
    put :x into the next <output/>
  else
    put '3 is the max...' into the next <output/>
  end

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (generic_command
                (identifier)
                (identifier)))
            (command_statement
              (if_statement
                (expression
                  (comparison_expression
                    (identifier)
                    (comparison_operator)
                    (number)))
                (command_sequence
                  (command_statement
                    (put_command
                      (expression
                        (identifier))
                      (expression
                        (the_expression
                          (query_literal))))))
                (else_clause
                  (command_sequence
                    (command_statement
                      (put_command
                        (expression
                          (string))
                        (expression
                          (the_expression
                            (query_literal)))))))))))))))

==================
if-otherwise (docs: otherwise keyword)
==================

on click increment :x
  if :x < 3
    put :x into the next <output/>
  otherwise
    put '3 is the max...' into the next <output/>

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (generic_command
                (identifier)
                (identifier)))
            (command_statement
              (if_statement
                (expression
                  (comparison_expression
                    (identifier)
                    (comparison_operator)
                    (number)))
                (command_sequence
                  (command_statement
                    (put_command
                      (expression
                        (identifier))
                      (expression
                        (the_expression
                          (query_literal))))))
                (else_clause
                  (command_sequence
                    (command_statement
                      (put_command
                        (expression
                          (string))
                        (expression
                          (the_expression
                            (query_literal)))))))))))))))

==================
unless modifier (docs: unless)
==================

on click set error to functionCouldReturnError()
  log error unless no error

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (set_command
                (expression
                  (identifier))
                (expression
                  (identifier)
                  (argument_list))))
            (command_statement
              (log_command
                (expression
                  (identifier)))
              (expression
                (unary_expression
                  (identifier))))))))))

==================
if match (docs: if I match .bordered)
==================

on click toggle .red unless I match .bordered

---

(source_file
  (feature_script
    (feature_sequence
      (on_feature
        (event_spec
          (event_binding
            (event_name
              (identifier))))
        (feature_body
          (command_sequence
            (command_statement
              (toggle_command
                (expression
                  (class_literal)))
              (expression
                (comparison_expression
                  (special_identifier)
                  (comparison_operator)
                  (class_literal))))))))))

==================
repeat for in (docs: loops)
==================

repeat for x in [1, 2, 3]
  log x
end

---

(source_file
  (command_script
    (command_sequence_top
      (command_statement
        (repeat_statement
          (repeat_clause
            (identifier)
            (expression
              (array_literal
                (expression
                  (number))
                (expression
                  (number))
                (expression
                  (number)))))
          (command_sequence
            (command_statement
              (log_command
                (expression
                  (identifier))))))))))

==================
for shorthand (docs: loops)
==================
